# Zeal-8-bit-OS

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  mkdocs.yml
.github/workflows/: build_zeal8bitos.yml
cmake/: gnu_toolchain.cmake  sdcc_gnu_toolchain.cmake  sdcc_toolchain.cmake  z88dk_toolchain.cmake  zos_config.cmake  zos_init.cmake  zos_utils.cmake
cmake/Modules/Compiler/: Z88DK-ASM.cmake  sdasz80-ASM.cmake
cmake/Modules/Platform/: ZOS-SDCC-C.cmake  ZOS.cmake
configs/: zeal8bit.default  zealemu.default
docs/: getting-started.md  index.md  supported-targets.md  system-calls.md
docs/details/: drivers.md  kernel.md  memory-mapping.md  syscalls.md  user-space.md  vfs.md
include/: disks_h.asm  drivers_h.asm  errors_h.asm  kern_mmu_h.asm  loader_h.asm  log_h.asm  mmu_h.asm  osconfig.asm  strutils_h.asm  syscalls_h.asm  target_h.asm  time_h.asm  utils_h.asm  vfs_h.asm
include/drivers/: keyboard_h.asm  video_text_h.asm
include/fs/: fs_h.asm  hostfs_h.asm  mbr_h.asm  rawtable_h.asm  zealfs_h.asm
kernel/: CMakeLists.txt  Kconfig  boot.asm  disks.asm  drivers.asm  linker.yaml  loader.asm  loader_elf.asm  loader_nommu.asm  log.asm  rst_vectors.asm  strutils.asm  syscalls.asm  syscalls_nommu.asm  time.asm  unit.mk  vfs.asm
kernel/fs/: hostfs.asm  mbr.asm  rawtable.asm  zealfs.asm  zealfs_v1.asm  zealfs_v2.asm
kernel_headers/: README.md
kernel_headers/examples/gnu-as/: CMakeLists.txt  Makefile  README.md
kernel_headers/examples/gnu-as/src/: main.asm
kernel_headers/examples/sdcc/: CMakeLists.txt  Makefile  README.md
kernel_headers/examples/sdcc-gnu/: CMakeLists.txt
kernel_headers/examples/sdcc-gnu/src/: main.c  message.s
kernel_headers/examples/sdcc/src/: main.c  str.c
kernel_headers/examples/z88dk-z80asm/: CMakeLists.txt  Makefile  README.md
kernel_headers/examples/z88dk-z80asm/src/: main.asm
kernel_headers/gnu-as/: README.md  base_gnu_as.cmake  z80-toolchain-settings.cmake  zos_err.asm  zos_keyboard.asm  zos_serial.asm  zos_sys.asm  zos_video.asm
kernel_headers/gnu-as/include/: strutils_h.asm
kernel_headers/gnu-as/src/strutils/: byte_to_ascii.asm  date_to_ascii.asm  dword_to_ascii.asm  dword_to_ascii_dec.asm  is_alpha.asm  is_alpha_numeric.asm  is_dec_digit.asm  is_hex_digit.asm  is_lower.asm  is_print.asm  is_upper.asm  is_whitespace.asm  memrep.asm  memsep.asm  memset.asm  parse_dec_digit.asm  parse_hex_digit.asm  parse_int.asm  strchrnul.asm  strcmp.asm  strcpy.asm  strcpy_raw.asm  strlen.asm  strltrim.asm  strncat.asm  strncmp.asm  strncpy.asm  strrtrim.asm  strsep.asm  strtolower.asm  strtoupper.asm  to_lower.asm  to_upper.asm
kernel_headers/sdcc/: Makefile  README.md  base_sdcc.cmake  base_sdcc.mk
kernel_headers/sdcc/include/: zos_errors.h  zos_keyboard.h  zos_serial.h  zos_sys.h  zos_time.h  zos_vfs.h  zos_video.h
kernel_headers/sdcc/lib/: README.md  patch_lib_code.py  z80.lib
kernel_headers/sdcc/src/: zeal8bitos.asm  zos_crt0.asm
kernel_headers/z88dk-z80asm/: Makefile  README.md  zos_err.asm  zos_keyboard.asm  zos_serial.asm  zos_sys.asm  zos_video.asm
kernel_headers/z88dk-z80asm/include/: strutils_h.asm
kernel_headers/z88dk-z80asm/lib/: strutils.lib
kernel_headers/z88dk-z80asm/src/strutils/: byte_to_ascii.asm  date_to_ascii.asm  dword_to_ascii.asm  dword_to_ascii_dec.asm  files.txt  is_alpha.asm  is_alpha_numeric.asm  is_dec_digit.asm  is_hex_digit.asm  is_lower.asm  is_print.asm  is_upper.asm  is_whitespace.asm  memrep.asm  memsep.asm  memset.asm  parse_dec_digit.asm  parse_hex_digit.asm  parse_int.asm  str_contains.asm  str_startswith.asm  strchrnul.asm  strcmp.asm  strcpy.asm  strcpy_raw.asm  strlen.asm  strltrim.asm  strncat.asm  strncmp.asm  strncpy.asm  strrtrim.asm  strsep.asm  strtolower.asm  strtoupper.asm  to_lower.asm  to_upper.asm
packer/: Makefile  README.md  pack.c
romdisk/: CMakeLists.txt  Kconfig  Makefile  cat.asm  date.asm  echo.asm  expr.asm  hexdump.asm  init.asm  less.asm  ls.asm  misc.asm  parse.asm  sleep.asm  strutils.asm  touch.asm  uart.asm  zealline.asm  zealline.lib
romdisk/init/: CMakeLists.txt  Makefile  cd.asm  echo.asm  errors.asm  expr.asm  hexdump.asm  mkdir.asm  opt.asm  parse.asm  sleep.asm  uart.asm  xfer.asm
tools/: README.md  concat.py  config_to_asm.py  pack.py  xfer.py  zld.py
